# examverse-core

./: README.md  pyproject.toml
docs/: architecture.md  contributing.md  dependency-graph.md  developer-guide.md  plugin-development-guide.md
docs/adr/: 001-plugin-system.md  002-dependency-injection.md  003-event-bus.md  004-ai-abstraction.md
examverse_core/: __init__.py
examverse_core/ai/: __init__.py  interfaces.py  registry.py
examverse_core/cli/: __init__.py  config.py  doctor.py  events.py  main.py  plugins.py  registry.py  scaffold.py  version.py
examverse_core/config/: __init__.py  settings.py
examverse_core/container/: __init__.py  container.py  descriptors.py  exceptions.py  resolver.py
examverse_core/events/: __init__.py  base.py  bus.py  middleware.py
examverse_core/logging/: __init__.py  context.py  logger.py
examverse_core/models/: __init__.py  ai.py  analytics.py  base.py  exam.py  study.py  user.py
examverse_core/plugins/: __init__.py  base.py  exceptions.py  registry.py
examverse_core/registry/: __init__.py  base.py
examverse_core/security/: __init__.py  audit.py  crypto.py  exceptions.py  jwt.py  permissions.py
examverse_core/utils/: __init__.py  compression.py  dates.py  hashing.py  identifiers.py  pagination.py  reflection.py  retry.py  serialization.py
examverse_core/validation/: __init__.py  validators.py
tests/: conftest.py
tests/test_ai/: test_registry.py
tests/test_cli/: eight  test_config.py  test_doctor.py  test_events_cmd.py  test_plugins_cmd.py  test_registry_cmd.py  test_scaffold.py  test_version.py
tests/test_config/: test_settings.py
tests/test_container/: test_container.py
tests/test_events/: test_bus.py
tests/test_logging/: test_context.py
tests/test_models/: test_models.py
tests/test_plugins/: test_base.py  test_registry.py
tests/test_security/: test_crypto.py  test_jwt.py  test_permissions.py
tests/test_utils/: test_compression.py  test_dates.py  test_identifiers.py  test_pagination.py  test_registry.py  test_retry.py  test_serialization.py
tests/test_validation/: test_validators.py
