[tool.poetry]
name = "examverse-core"
version = "0.1.0"
description = "Shared runtime foundation for the ExamVerseOS ecosystem"
authors = ["ExamVerse Team <team@examverse.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "examverse_core" }]
homepage = "https://github.com/examverse/examverse-core"
repository = "https://github.com/examverse/examverse-core"
documentation = "https://docs.examverse.io/core"
keywords = ["examverse", "framework", "plugin-system", "dependency-injection", "event-bus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
structlog = "^24.1.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
cryptography = "^42.0.0"
anyio = "^4.4.0"
email-validator = "^2.1.1"
python-slugify = "^8.0.4"
orjson = "^3.10.3"
zstandard = "^0.22.0"
importlib-metadata = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest-mock = "^3.14.0"
faker = "^25.2.0"
freezegun = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM", "TCH"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=examverse_core --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["examverse_core"]
omit = ["tests/*"]
